--- a/src/NuGetGallery/NuGetGallery.csproj
+++ b/src/NuGetGallery/NuGetGallery.csproj
@@ -820,6 +820,10 @@
     <Compile Include="Migrations\201609260823310_ScopedCredential.Designer.cs">
       <DependentUpon>201609260823310_ScopedCredential.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609270831462_AddExpirationColumn.cs" />
+    <Compile Include="Migrations\201609270831462_AddExpirationColumn.Designer.cs">
+      <DependentUpon>201609270831462_AddExpirationColumn.cs</DependentUpon>
+    </Compile>
     <Compile Include="OData\Conventions\CompositeODataKeyHelper.cs" />
     <Compile Include="OData\Conventions\EntitySetPropertyRoutingConvention.cs" />
     <Compile Include="OData\ODataServiceVersionHeaderPropagatingBatchHandler.cs" />
@@ -1944,6 +1948,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609260823310_ScopedCredential.resx">
       <DependentUpon>201609260823310_ScopedCredential.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609270831462_AddExpirationColumn.resx">
+      <DependentUpon>201609270831462_AddExpirationColumn.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Strings.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
