--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -25,6 +25,9 @@
     <!-- ******************* -->
     <!-- These should change on every deployment (to rotate credentials, etc.) -->
     <add key="Gallery.StorageType" value="FileSystem" />
+
+    <add key="Gallery.FileStorageDirectory" value="c:\tmp" />
+    
     <!-- The storage type to use. Can be FileSystem (default) or AzureStorage -->
     <add key="Gallery.AzureStorageConnectionString" value="" />
     <!-- The connection string for the Azure Storage Account used for Package Storage IF Gallery.StorageType is AzureStorage -->
@@ -36,7 +39,7 @@
     <!-- ******************** -->
     <!-- These only need to change when defining a new environment -->
     <!-- development only key, override on live site -->
-    <add key="Gallery.Environment" value="Development" />
+    <add key="Gallery.Environment" value="Production" />
 
     <!-- banner warning on the top - leave blank to remove the banner from the site. -->
     <add key="Gallery.WarningBanner" value="" />
@@ -51,7 +54,7 @@
     <!-- Set this if you have a Google Analytics property for the site -->
     <add key="Gallery.AzureCdnHost" value="" />
     <!-- Set this to the Azure CDN Host you are using for blob storage, if you have configured one -->
-    <add key="Gallery.SiteRoot" value="http://nuget.localtest.me/" />
+    <add key="Gallery.SiteRoot" value="http://br-srvvmrep-04:8585/" />
     <add key="reCAPTCHA::PrivateKey" value="" />
     <add key="reCAPTCHA::PublicKey" value="" />
   
@@ -70,6 +73,10 @@
     <add key="Auth.MicrosoftAccount.Enabled" value="false" />
     <add key="Auth.MicrosoftAccount.ClientId" value="" />
     <add key="Auth.MicrosoftAccount.ClientSecret" value="" />
+
+    <add key="Auth.ActiveDirectory.Enabled" value="true" />
+    <add key="Auth.ActiveDirectory.Domain" value="SPRING" />
+    <add key="Auth.ActiveDirectory.ShowOnLoginPage" value="true" />
 
     <add key="Auth.AzureActiveDirectory.Enabled" value="false" />
     <add key="Auth.AzureActiveDirectory.ClientId" value="" />
@@ -136,8 +143,10 @@
     <add key="KeyVault.CertificateThumbprint" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="Gallery.SqlServer" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=NuGetGallery; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="Gallery.SupportRequestSqlServer" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=SupportRequest; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="Gallery.SqlServer" connectionString="Data Source=BR-SRVVMREP-04\PROD2014;User id=setup;Password=setup;Initial Catalog=NuGetGallery;MultipleActiveResultSets=True"
+      providerName="System.Data.SqlClient" />
+    <add name="Gallery.SupportRequestSqlServer" connectionString="Data Source=BR-SRVVMREP-04\PROD2014;User id=setup;Password=setup;Initial Catalog=SupportRequest;MultipleActiveResultSets=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <elmah>
     <security allowRemoteAccess="true" />
