--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -143,9 +143,9 @@
     <add key="KeyVault.CertificateThumbprint" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="Gallery.SqlServer" connectionString="Data Source=BR-SRVVMREP-04\PROD2014;User id=setup;Password=setup;Initial Catalog=NuGetGallery;MultipleActiveResultSets=True"
+    <add name="Gallery.SqlServer" connectionString="Data Source=GEOVANA;User id=GEOVANA;Password=GEOVANA;Initial Catalog=NuGetGallery;MultipleActiveResultSets=True"
       providerName="System.Data.SqlClient" />
-    <add name="Gallery.SupportRequestSqlServer" connectionString="Data Source=BR-SRVVMREP-04\PROD2014;User id=setup;Password=setup;Initial Catalog=SupportRequest;MultipleActiveResultSets=True"
+    <add name="Gallery.SupportRequestSqlServer" connectionString="Data Source=GEOVANA;User id=GEOVANA;Password=GEOVANA;Initial Catalog=SupportRequest;MultipleActiveResultSets=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <elmah>
